# patina

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PATINA_OPTIMIZATION_PLAN_V2.md  README.md  SECURITY.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docker.yml  release.yml
Formula/: patina.rb  rct.rb
benches/: parallel_tools.rs  rendering.rs
docs/: SECURITY_AUDIT.md  TDD-PRODUCTION-PLAN.md  api.md  architecture.md  plugin-api.md  rct-bootstrap-guide.md  rct-implementation-plan.md  security-model.md  user-guide.md
examples/minimal-plugin/: README.md
packaging/debian/: changelog  control  copyright  rules
packaging/rpm/: rct.spec
packaging/scoop/: rct.json
packaging/winget/: postrv.rct.installer.yaml  postrv.rct.locale.en-US.yaml  postrv.rct.yaml
plugins/echo/: README.md  rct-plugin.toml
plugins/file-stats/: README.md  rct-plugin.toml
plugins/narsil/: rct-plugin.toml
plugins/template/: README.md  rct-plugin.toml
scripts/: README.md
src/: error.rs  lib.rs  main.rs
src/agents/: mod.rs  orchestrator.rs  parallel.rs
src/api/: compaction.rs  context.rs  mod.rs  multi_model.rs  tokens.rs  tools.rs
src/app/: commands.rs  mod.rs  state.rs  tool_loop.rs
src/auth/: flow.rs  mod.rs  pkce.rs  refresh.rs  storage.rs
src/commands/: mod.rs  worktree.rs
src/context/: mod.rs
src/continuous/: events.rs  mod.rs  plugin.rs
src/enterprise/: audit.rs  cost.rs  mod.rs
src/hooks/: mod.rs
src/ide/: controller.rs  handlers.rs  mod.rs  protocol.rs
src/mcp/: client.rs  mod.rs  protocol.rs  transport.rs
src/narsil/: context.rs  integration.rs  mod.rs  security.rs
src/permissions/: mod.rs  patterns.rs
tests/: api_client.rs  audit_integration.rs  compaction_integration.rs  cost_integration.rs  hooks_integration.rs  integration.rs  mcp_integration.rs  multi_model_integration.rs  oauth_integration.rs  plugin_api_integration.rs  session_integration.rs  subagent_integration.rs  tools.rs  unit.rs  update_integration.rs  vision_integration.rs  web_fetch_integration.rs
(+120 files in other folders)
