[package]
name = "patina"
version = "0.6.1"
edition = "2021"
rust-version = "1.75"
description = "Patina - High-performance terminal client for Claude API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/postrv/patina"
keywords = ["claude", "anthropic", "terminal", "tui", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.45", features = ["full", "process"] }
futures = "0.3"

ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }

reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

clap = { version = "4.5", features = ["derive", "env"] }

directories = "5.0"

syntect = "5.2"

pulldown-cmark = "0.12"
html2text = "0.12"
scraper = "0.20"

glob = "0.3"
regex = "1.11"

uuid = { version = "1.11", features = ["v4", "serde"] }

semver = "1.0"

sha2 = "0.10"
hex = "0.4"
humantime = "2.2"

anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.10"
once_cell = "1.20"
unicode-width = "0.2"
textwrap = "0.16"
walkdir = "2.5"

# OAuth authentication
keyring = "3"
webbrowser = "1.0"
tiny_http = "0.12"
base64 = "0.22"
rand = "0.8"

# Clipboard support for copy/paste
arboard = "3"
urlencoding = "2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
insta = { version = "1.41", features = ["yaml"] }
mockall = "0.13"
pretty_assertions = "1.4"
proptest = "1.5"
serial_test = "3.2"
tempfile = "3.14"
tokio-test = "0.4"
tracing-test = "0.2"
wiremock = "0.6"

[[bin]]
name = "mock_mcp_server"
path = "tests/helpers/mock_mcp_server.rs"

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "parallel_tools"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
